Fix problem with garden canvas stretching over footer text by setting container to take into account arrangement controls height. Moved to ES 2017 in order stall conveniently for the height to be available on arrangement controls. Stopped limiting size of filters to make things less claustrophobic.

--- a/app.css
+++ b/app.css
@@ -569,12 +569,7 @@ a {
 }
 
 .filter-list {
-  max-height: 10em;
-  overflow-y: scroll;
-  border: 1px solid black;
-  /*! border-radius: 0.5em; */
   padding: 1em;
-  /*! box-shadow: #666 inset 0 0 6px; */
   display: flex;
   flex-wrap: wrap;
 }
